# sqlite-path

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  VERSION  core_init.c  docs.md  sqlite-path.c  sqlite-path.h  test.sql
.github/workflows/: release.js  release.yaml  test.yaml  upload-deno-assets.js  upload.js
bindings/ruby/: sqlite_path.gemspec
bindings/ruby/lib/: sqlite_vss.rb  version.rb  version.rb.tmpl
bindings/sqlite-utils/: README.md  pyproject.toml  pyproject.toml.tmpl
bindings/sqlite-utils/sqlite_utils_sqlite_path/: __init__.py
deno/: README.md  README.md.tmpl  deno.json  mod.ts  test.ts
npm/: README.md
npm/sqlite-path/: README.md  package.json  test.js
npm/sqlite-path-darwin-arm64/: README.md  package.json
npm/sqlite-path-darwin-x64/: README.md  package.json
npm/sqlite-path-linux-x64/: README.md  package.json
npm/sqlite-path-windows-x64/: README.md  package.json
npm/sqlite-path/src/: index.js
python/: .gitignore  README.md  setup.py
python/.github/workflows/: publish.yml  test.yml
python/datasette_sqlite_path/: README.md  setup.py
python/datasette_sqlite_path/datasette_sqlite_path/: __init__.py
python/datasette_sqlite_path/tests/: test_sqlite_path.py
python/sqlite_path/: README.md  __init__.py  setup.py
python/sqlite_path/sqlite_path/: __init__.py
python/tests/: test_sqlite_path.py
scripts/: deno_generate_package.sh  npm_generate_platform_packages.sh  python_generate_package.sh
src/: lib.rs
tests/: test-loadable.py  test-python.py  test-sqlite3.py  test-sqljs.html
